{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 83,
  "lineage": "86a3681c-65e7-1f72-510c-7ce913aa642a",
  "resources": [
    {
      "module": "module.bmr",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.bmr",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/79b679f3a9e7a67c648043ede4dfb1a4/026101cccecf97ad",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/36bf568f34d96669",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "bmr.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/36bf568f34d96669",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 7,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.bmr.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.bmr",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/79b679f3a9e7a67c648043ede4dfb1a4/026101cccecf97ad",
            "arn_suffix": "targetgroup/79b679f3a9e7a67c648043ede4dfb1a4/026101cccecf97ad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/79b679f3a9e7a67c648043ede4dfb1a4/026101cccecf97ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "79b679f3a9e7a67c648043ede4dfb1a4",
            "name_prefix": "79b679",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bmr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-04a301f41acc77618",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a301f41acc77618",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-bmr",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.calories",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.calories",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/500f8c4aaa8cbcfc122786e70746402b/dad2851e8c68d762",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/2091bce581676927",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "calories.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/2091bce581676927",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 3,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.calories.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.calories",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/500f8c4aaa8cbcfc122786e70746402b/dad2851e8c68d762",
            "arn_suffix": "targetgroup/500f8c4aaa8cbcfc122786e70746402b/dad2851e8c68d762",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/500f8c4aaa8cbcfc122786e70746402b/dad2851e8c68d762",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "500f8c4aaa8cbcfc122786e70746402b",
            "name_prefix": "500f8c",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.calories",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-0c6baf6a4dee50c89",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6baf6a4dee50c89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-calories",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.health_api",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-ingress/bff8998db8598c76",
            "arn_suffix": "app/linuxtips-ecs-cluster-ingress/bff8998db8598c76",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "linuxtips-ecs-cluster-ingress-760941443.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-ingress/bff8998db8598c76",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-ingress",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09dd33949ddb14b80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0195cdb098e3c9446"
              },
              {
                "subnet_id": "subnet-0bcb676b5ab6e96f7"
              },
              {
                "subnet_id": "subnet-0d37fa9221095e382"
              }
            ],
            "subnets": [
              "subnet-0195cdb098e3c9446",
              "subnet-0bcb676b5ab6e96f7",
              "subnet-0d37fa9221095e382"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.health_api",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/c41a254d3f112d69cd640000f891bd61/6d983d75393c2237",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-ingress/bff8998db8598c76/b51289923add9ca1/bec7335b013d5c56",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "health.linuxtips.demo"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-ingress/bff8998db8598c76/b51289923add9ca1/bec7335b013d5c56",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-ingress/bff8998db8598c76/b51289923add9ca1",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener",
            "data.aws_ssm_parameter.vpc",
            "module.health_api.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.health_api",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/c41a254d3f112d69cd640000f891bd61/6d983d75393c2237",
            "arn_suffix": "targetgroup/c41a254d3f112d69cd640000f891bd61/6d983d75393c2237",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthcheck",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/c41a254d3f112d69cd640000f891bd61/6d983d75393c2237",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "c41a254d3f112d69cd640000f891bd61",
            "name_prefix": "c41a25",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.health_api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-0d2b6181193cc1d07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2b6181193cc1d07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-health-api",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.imc",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.imc",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/684b92c41e980e6dd04913ca09501860/e755bf61ede14150",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/af50d472dfff1600",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "imc.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/af50d472dfff1600",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 5,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.imc.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.imc",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/684b92c41e980e6dd04913ca09501860/e755bf61ede14150",
            "arn_suffix": "targetgroup/684b92c41e980e6dd04913ca09501860/e755bf61ede14150",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/684b92c41e980e6dd04913ca09501860/e755bf61ede14150",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "684b92c41e980e6dd04913ca09501860",
            "name_prefix": "684b92",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.imc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-0e952d57bb329a3a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e952d57bb329a3a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-imc",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jaeger-collector",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.jaeger-collector",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/f98a882d68c3bd02d61cbeed06f6a3d2/5cd00d9d44fc3474",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/acc7dfe596e63ede",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "jaeger-collector.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/acc7dfe596e63ede",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.jaeger-collector.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.jaeger-collector",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/f98a882d68c3bd02d61cbeed06f6a3d2/5cd00d9d44fc3474",
            "arn_suffix": "targetgroup/f98a882d68c3bd02d61cbeed06f6a3d2/5cd00d9d44fc3474",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/",
                "port": "14269",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/f98a882d68c3bd02d61cbeed06f6a3d2/5cd00d9d44fc3474",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "f98a882d68c3bd02d61cbeed06f6a3d2",
            "name_prefix": "f98a88",
            "port": 9411,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jaeger-collector",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-00ce58171eea49b3e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ce58171eea49b3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9411,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9411
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-jaeger-collector",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.proteins",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.proteins",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/319d74f0a6f7645ddcfe8410ece1cd28/5d63f5c3008133ed",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/37d66e97362165e2",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "proteins.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/37d66e97362165e2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.proteins.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.proteins",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/319d74f0a6f7645ddcfe8410ece1cd28/5d63f5c3008133ed",
            "arn_suffix": "targetgroup/319d74f0a6f7645ddcfe8410ece1cd28/5d63f5c3008133ed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/319d74f0a6f7645ddcfe8410ece1cd28/5d63f5c3008133ed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "319d74f0a6f7645ddcfe8410ece1cd28",
            "name_prefix": "319d74",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.proteins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-06c6c0c77b50d39e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c6c0c77b50d39e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-proteins",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.recommendations",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.recommendations",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/58e022da9cf6235b33bec04f938177f4/9d5cbb659206120d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/400a3ebee7000882",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "recommendations.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/400a3ebee7000882",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 6,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.recommendations.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.recommendations",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/58e022da9cf6235b33bec04f938177f4/9d5cbb659206120d",
            "arn_suffix": "targetgroup/58e022da9cf6235b33bec04f938177f4/9d5cbb659206120d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/58e022da9cf6235b33bec04f938177f4/9d5cbb659206120d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "58e022da9cf6235b33bec04f938177f4",
            "name_prefix": "58e022",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.recommendations",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-0be7724f2d8ca9e5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be7724f2d8ca9e5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-recommendations",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.water",
      "mode": "data",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "arn_suffix": "app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-linuxtips-ecs-cluster-internal-508168171.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:loadbalancer/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "linuxtips-ecs-cluster-internal",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02e941a6098c78847"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08f2debe499751a08"
              },
              {
                "subnet_id": "subnet-0a38752b933399838"
              },
              {
                "subnet_id": "subnet-0f9d16dbdf4c5134f"
              }
            ],
            "subnets": [
              "subnet-08f2debe499751a08",
              "subnet-0a38752b933399838",
              "subnet-0f9d16dbdf4c5134f"
            ],
            "vpc_id": "vpc-0079a63c3659c593b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "arn"
              }
            ]
          ]
        }
      ]
    },
    {
      "module": "module.water",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/b8144f1cf116129e1ed117181cbd0805/69842f4e258ff6f5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/cef9948d68fa2950",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "water.linuxtips-ecs-cluster.internal.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener-rule/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40/cef9948d68fa2950",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:listener/app/linuxtips-ecs-cluster-internal/d71ffe1c2e9b64f1/c742af64abc41e40",
            "priority": 4,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "listener_arn"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.listener_internal",
            "data.aws_ssm_parameter.vpc",
            "module.water.aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.water",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/b8144f1cf116129e1ed117181cbd0805/69842f4e258ff6f5",
            "arn_suffix": "targetgroup/b8144f1cf116129e1ed117181cbd0805/69842f4e258ff6f5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:140023395225:targetgroup/b8144f1cf116129e1ed117181cbd0805/69842f4e258ff6f5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "b8144f1cf116129e1ed117181cbd0805",
            "name_prefix": "b8144f",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.water",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140023395225:security-group/sg-06cc96c0f71bb6fd1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cc96c0f71bb6fd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "linuxtips-ecs-cluster-nutrition-water",
            "name_prefix": "",
            "owner_id": "140023395225",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0079a63c3659c593b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc"
          ]
        }
      ]
    }
  ]
}